# DatsMagic

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  test.py
src/APIClient/: APIC;ient.py  APIClient.py
src/Action/: Action.py
src/DataClasses/: Anomaly.py  Carpet_airplane.py  Constants.py  Gold.py  Map.py
src/GameLoop/: GameLoop.py
src/Graphics/: PrintMap.py  Visualizator.py
src/Parser/: Parser.py
src/Utils/: Utils.py
