[tool.poetry]
name = "datsmagic"
version = "0.1.0"
description = ""
authors = ["Vitaliy Davydov <ychebn1y@yandex.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
